--- a/build.gradle
+++ b/build.gradle
@@ -21,8 +21,8 @@ plugins {
 }
 */
 version = "1.0"
-group= "com.yourname.modid" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "modid"
+group= "mcserver2txt" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = "mcserver2txt"
 
 minecraft {
     version = "1.8.9-11.15.1.1722"
